--- a/src/main/resources/pkg/gestion_stock/fxml/menu.fxml
+++ b/src/main/resources/pkg/gestion_stock/fxml/menu.fxml
@@ -62,6 +62,14 @@
                                -fx-font-size: 14; -fx-padding: 12; -fx-alignment: CENTER_LEFT;
                                -fx-background-radius: 5;"/>
 
+                <Button fx:id="btnHistorique" text="📜  Historique"
+                        onAction="#showHistorique"
+                        styleClass="menu-button" maxWidth="Infinity"
+                        style="-fx-background-color: transparent; -fx-text-fill: #ecf0f1;
+               -fx-font-size: 14; -fx-padding: 12; -fx-alignment: CENTER_LEFT;
+               -fx-background-radius: 5;"/>
+
+
                 <Region VBox.vgrow="ALWAYS"/>
 
                 <Separator style="-fx-background-color: #34495e;"/>
